<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/themeOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_theme"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="10dp"/>
        <RadioButton
            android:id="@+id/lightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_light"
            android:textSize="20sp"
            android:layout_marginStart="15dp"/>
        <RadioButton
            android:id="@+id/darkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_dark"
            android:textSize="20sp"
            android:layout_marginStart="15dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_notification"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingTop="10dp"/>
    <CheckBox
        android:id="@+id/notificationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_allow_push"
        android:textSize="20sp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_profile"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_email"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>
    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_nickname"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:inputType="text"
        android:autofillHints="name"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_save"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:padding="10dp"/>

</LinearLayout>